@@ -38,7 +38,7 @@ this repository contains the full copyright notices and license terms. -->
             </PmtTpInf>
             <ReqdColltnDt>${key['date'].isoformat()}</ReqdColltnDt>
             <Cdtr>
-                ${PartyIdentification(group.company.party, id=False)}
+                ${PartyIdentification(group.journal.creditor or group.company.party, id=False)}
             </Cdtr>
             <CdtrAcct>
                 ${Account(group.journal.sepa_bank_account_number)}
@@ -49,7 +49,7 @@ this repository contains the full copyright notices and license terms. -->
             <!-- UltmtCdtr -->
             <ChrgBr>SLEV</ChrgBr>
             <CdtrSchmeId>
-                ${PartyIdentification(group.company.party, with_name=False, with_address=False)}
+                ${PartyIdentification(group.journal.creditor or group.company.party, with_name=False, with_address=False)}
             </CdtrSchmeId>
             <DrctDbtTxInf py:for="payment in payments">
                 <PmtId>
